--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
+**/target/
+/target/
+*/target/*
+.classpath
+.project
+.settings
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+*.iml
+*.idea
